package com.donatrack.notificaciones.domain.entities;

public enum TipoEvento {
    INACTIVIDAD_DONANTE,
    DONACION_ASIGNADA_ENTIDAD,
    DONACION_ASIGNADA_DONANTE,
    MISION_CUMPLIDA,
    CAMBIO_CATEGORIA,
    INICIO_RUTA_LOGISTICA
}
